--- a/examples/memory-management/index.html
+++ b/examples/memory-management/index.html
@@ -2,10 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Elimination Example</title>
+    <title>Memory Management Example</title>
     <script src="../../node_modules/p5/lib/p5.min.js"></script>
-    <script src="../../node_modules/katex/dist/katex.min.js"></script>
-    <link rel="stylesheet" href="../../node_modules/katex/dist/katex.min.css">
     <script src="../../dist/p5.ten.js"></script>
     <script src="sketch.js"></script>
     <style>
